examples/test/testpolicy16022.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16022
  namespace: namespace134
spec:
  podSelector:
    matchLabels:
      key17: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value36
          key7: value1
          key32: value36
      podSelector:
        matchLabels:
          key4: value32
          key22: value21
